objects/Time_Log__c.object
<CustomObject>
    <fields>
        <fullName>Business_Time_in_Hours__c</fullName>
        <label>Business Time in Hours</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Business_Hours_ID__c</fullName>
        <description>Used by Apex Class to determine the difference in business hours. Using the formula fields removes the need for a SOQL query.</description>
        <formula>Case_Time__r.Case__r.BusinessHoursId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Business Hours ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Closed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <description>The Case Owner at the time of the Time Log</description>
        <label>Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <description>The Status of the Case at the time of the Snapshot</description>
        <label>Case Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Time__c</fullName>
        <label>Case Time</label>
        <referenceTo>Case_Time__c</referenceTo>
        <relationshipName>Case_Status_Times</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>In_Effect_From__c</fullName>
        <label>In Effect From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>In_Effect_Until__c</fullName>
        <label>In Effect Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Included_in_SLA_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trigger looks up Custom Setting to determine if this is a Stop Status or not.</description>
        <label>Included in SLA Time?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Change__c</fullName>
        <formula>Case_Time__r.Most_Recent_Change__c</formula>
        <label>Most Recent Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_Case_Status__c</fullName>
        <label>New Case Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Bucket__c</fullName>
        <label>Time Bucket</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_in_Hours__c</fullName>
        <formula>( In_Effect_Until__c - In_Effect_From__c) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Hours</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Time Log</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Time Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>